--- a/app/globals.css
+++ b/app/globals.css
@@ -28,18 +28,20 @@ body {
 }
 
 .red-scrollbar::-webkit-scrollbar {
-  width: 12px;
+  width: 8px;
 }
 
 .red-scrollbar::-webkit-scrollbar-track {
   background: #502124;
+  margin-block-start: 12px;
+  border: 2px solid #151a2b;
   width: 6px;
 }
 
 .red-scrollbar::-webkit-scrollbar-thumb {
-  background: #ae3a36;
+  background: #f75049;
 }
 
 .red-scrollbar::-webkit-scrollbar-thumb:hover {
-  background: #f75049;
+  background: #53f6ff;
 }
