Style nested update

--- a/app/globals.css
+++ b/app/globals.css
@@ -60,22 +60,26 @@ abbr:where([title]) {
 
 .react-calendar {
   @apply text-teal-blur;
-  .react-calendar__navigation__label {
-    @apply text-teal-blur;
-    font-size: 1.2rem;
-  }
-  .unavailable {
-    @apply text-red-blur;
-    @apply bg-grid-red;
-    pointer-events: all;
-    cursor: not-allowed;
-  }
-  button {
-    padding: 6px;
-    @apply text-teal-blur;
-    pointer-events: none;
-  }
-  .react-calendar__month-view__days__day--weekend {
-    @apply text-red-blur;
-  }
+}
+
+.react-calendar .react-calendar__navigation__label {
+  @apply text-teal-blur;
+  font-size: 1.2rem;
+}
+
+.react-calendar .unavailable {
+  @apply text-red-blur;
+  @apply bg-grid-red;
+  pointer-events: all;
+  cursor: not-allowed;
+}
+
+.react-calendar button {
+  padding: 6px;
+  @apply text-teal-blur;
+  pointer-events: none;
+}
+
+.react-calendar .react-calendar__month-view__days__day--weekend {
+  @apply text-red-blur;
 }
