--- a/app/globals.css
+++ b/app/globals.css
@@ -63,6 +63,23 @@ abbr:where([title]) {
   text-decoration: none;
 }
 
+.type {
+  position: relative;
+}
+
+.type::after {
+  content: '|';
+  animation: cursor 1.1s infinite step-start;
+  display: inline-block;
+  opacity: 0.5;
+}
+
+@keyframes cursor {
+  50% {
+    opacity: 0;
+  }
+}
+
 .react-calendar {
   @apply text-teal-blur;
 }
