--- a/app/globals.css
+++ b/app/globals.css
@@ -72,6 +72,7 @@ abbr:where([title]) {
   animation: cursor 1.1s infinite step-start;
   display: inline-block;
   opacity: 0.5;
+  position: relative;
 }
 
 @keyframes cursor {
