Converted PX on non-fonts elements to rem/em

--- a/app/globals.css
+++ b/app/globals.css
@@ -105,7 +105,7 @@ abbr:where([title]) {
 }
 
 .react-calendar button {
-  padding: 6px;
+  padding: 0.375em;
   @apply text-teal-blur;
   pointer-events: none;
 }
@@ -116,6 +116,6 @@ abbr:where([title]) {
 
 .react-calendar .react-calendar__navigation {
   @apply bg-grid-red;
-  padding-top: 4px;
-  margin-bottom: 6px;
+  padding-top: 0.25rem;
+  margin-bottom: 0.375rem;
 }
