--- a/app/globals.css
+++ b/app/globals.css
@@ -120,23 +120,16 @@ abbr:where([title]) {
   margin-bottom: 0.375rem;
 }
 
-@keyframes reveal {
-  from {
-    mask-size: 0 0;
-    mask-position: center 40%;
-  }
-  to {
-    mask-size: 700vw 700vh;
-    mask-position: center 34%;
-  }
-}
-
 .masked-element {
-  animation: reveal 5s linear infinite; /* adjust duration and timing function as needed */
   mask-image: url('/glb/elabs-mask.svg');
   -webkit-mask-image: url('/glb/elabs-mask.svg'); /* for Safari */
   mask-repeat: no-repeat;
   -webkit-mask-repeat: no-repeat; /* for Safari */
   mask-position: center;
   -webkit-mask-position: center; /* for Safari */
+}
+
+.unmasked {
+  -webkit-mask: none !important;
+  mask: none !important;
 }
