--- a/app/globals.css
+++ b/app/globals.css
@@ -24,7 +24,7 @@ body,
 }
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+  background-color: #000;
 }
 
 .red-scrollbar::-webkit-scrollbar {
